--- a/java/pom.xml
+++ b/java/pom.xml
@@ -174,7 +174,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>fr.paul.temp.utils.App</mainClass>
+                            <mainClass>fr.paul.corp.utils.App</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
